Currently working on fixing the spacing in the data recieved

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -117,10 +117,16 @@ input {
   }
 
   &__username {
+    color: #0079ff;
   }
 }
 
 .content {
+  display: flex;
+  flex-direction: column;
+}
+
+.flex {
   display: flex;
   flex-direction: column;
 }
